<resources>
    <string name="app_name">PIOUGaetan_PersistanceDonnees_BDD</string>
    <string name="name">Nom</string>
    <string name="creer">Créer un compte</string>
    <string name="login">Login</string>
    <string name="se_connecter">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="mail">Adresse E-Mail</string>
    <string name="settings">Options</string>
    <string name="deconnection">Déconnexion</string>
    <string name="localite">Localisation</string>
    <string name="ddn">Date de naissance</string>
    <string name="recherche">Recherche</string>
</resources>